<resources>
    <string name="app_name">WeatherApp</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>

    <string name="nav_header_desc">Navigation Description</string>
    <string name="nav_header_title">User Name Weather Application</string>

    <string name="hello_blank_fragment">Work in progress</string>

    <string name="home_weather_icon">Weather Conditions Icon</string>
    <string name="home_humidity_icon">Humidity Icon</string>
    <string name="home_degrees_icon">Degrees Icon</string>
    <string name="home_wind_icon">Windy Icon</string>

    <string name="search_city_city_name_hint">Search for a city</string>
    <string name="search_city_map_coming_soon">Map coming soon</string>
    <string name="search_city_search">Search</string>
    <string name="search_city_title">Search City</string>
    <string name="ui_wind_speed">%1$d km/h</string>
    <string name="ui_humidity">%1$d %%</string>
    <string name="ui_pressure">%1$d hPa</string>
    <string name="ui_last_update_date">Last update\n%1$s</string>
    <string name="refresh_details_data">refresh details data</string>
    <string name="home_empty_list">No cities marked as favourite, please search for a city and mark it as favourite</string>

    <plurals name="ui_visibility">
        <item quantity="one">%1$d meter</item>
        <item quantity="other">%1$d meters</item>
    </plurals>
</resources>
