<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="@string/app_name"
    app:startDestination="@id/menu_home">

    <fragment
        android:id="@+id/menu_home"
        android:name="com.dgr.yourneoweather.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_menu_home_to_SearchCityFragment"
            app:destination="@id/SearchCityFragment" />
    </fragment>

    <fragment
        android:id="@+id/menu_settings"
        android:name="com.dgr.yourneoweather.ui.EmptyFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_empty" />

    <fragment
        android:id="@+id/SearchCityFragment"
        android:name="com.dgr.yourneoweather.ui.searchcity.SearchCityFragment"
        android:label="@string/search_city_title"
        tools:layout="@layout/search_city_fragment">
        <action
            android:id="@+id/action_SearchCityFragment_to_weatherDetailsFragment"
            app:destination="@id/weatherDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/weatherDetailsFragment"
        android:name="com.dgr.yourneoweather.ui.weatherdetails.WeatherDetailsFragment"
        android:label="weather_details_fragment"
        tools:layout="@layout/weather_details_fragment">
        <argument
            android:name="weatherDetails"
            app:argType="com.dgr.yourneoweather.common.model.WeatherUI" />
    </fragment>

</navigation>