<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.searchcity.SearchCityFragment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_city_name"
            style="@style/WeatherAppTheme.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:layout_marginTop="@dimen/spacing_16"
            android:layout_marginEnd="@dimen/spacing_8"
            android:hint="@string/search_city_city_name_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintEnd_toStartOf="@+id/btn_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_search"
            style="@style/WeatherAppTheme.ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_16"
            android:text="@string/search_city_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_city_name" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/spacing_16"
            android:gravity="center"
            android:text="@string/search_city_map_coming_soon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_city_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/layout_progress_bar" />

</FrameLayout>